# Operating-Systems-labs

./: .gitignore  CMakeLists.txt  README.md
Lab2/: Summary-Processes  Summary-Results
Lab2/src/com/boa/lab2/: Main.java  ShortestProcessNextAlgorithm.java
Lab3/: tracefile
Lab3/src/com/boa/: Main.java
Lab3/src/com/boa/refactored/: AddressConverter.java  ClockAlgorithm.java  Common.java  ControlPanel.java  Instruction.java  Kernel.java  Main.java  MemoryManagement.java  Page.java  PageFault.java  Virtual2Physical.java  commands  memory.conf
Lab3/src/com/boa/simulator/: Common.java  ControlPanel.java  Instruction.java  Kernel.java  MemoryManagement.java  NRUAlgorithm.java  (+3 more)
Labs/Lab1/: main.cpp
Labs/Lab1/FirstFunction/: FirstFunction.sln
Labs/Lab1/FirstFunction/Debug/: FirstFunction.ilk
Labs/Lab1/FirstFunction/FirstFunction/: FirstFunction.cpp  FirstFunction.vcxproj  FirstFunction.vcxproj.filters  my_client.cpp  my_client.h
Labs/Lab1/Manager/: Manager.cpp  main.cpp  my_data.cpp  my_data.h  my_manager.cpp  my_manager.h  my_process.cpp  my_process.h  shared_value.h
Labs/Lab1/Manager/Addition classes and functions/: my_printer.cpp  my_printer.h  other_functions.cpp  other_functions.h  shared_value.h
Labs/Lab1/Manager/Process/: my_process.cpp  my_process.h
Labs/Lab1/Manager/Server/: my_server.cpp  my_server.h
Labs/Lab1/SecondFunction/: SecondFunction.sln
Labs/Lab1/SecondFunction/Debug/: SecondFunction.ilk
Labs/Lab1/SecondFunction/SecondFunction/: SecondFunction.cpp  SecondFunction.vcxproj  SecondFunction.vcxproj.filters  my_client.cpp  my_client.h
(+41 files in other folders)
